Set Up Middleware

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Uninroam",
-  "name": "Uninroam",
+  "short_name": "Uninroam Admin",
+  "name": "Uninroam Admin",
   "icons": [
     {
       "src": "logo.png",
